--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -10,6 +10,7 @@
     "cropper": "~0.10.1",
     "bootstrap":"3.3.6",
     "jquery":"2.1.4", 
-	"angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3"
+    "ngImgCrop": "~0.3.2",
+    "angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3"
   }
 }
