--- a/profi-wsgi-apache2.conf
+++ b/profi-wsgi-apache2.conf
@@ -1,7 +1,7 @@
-#WSGIPythonPath /v----directory----1:/v----directory----.venv/lib/python3.4/site-packages1
-#WSGIPythonHome /v----directory----1
+#WSGIPythonPath /v/var/www1:/v/var/www.venv/lib/python3.4/site-packages1
+#WSGIPythonHome /v/var/www1
 
-<Directory ----directory----/>
+<Directory /var/www/>
     Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
@@ -11,7 +11,7 @@
     ServerName profireader.com
     WSGIDaemonProcess profi user=www-data group=www-data threads=5
     WSGIProcessGroup profi
-    WSGIScriptAlias / ----directory----/run.wsgi
+    WSGIScriptAlias / /var/www/run.wsgi
 #    WSGIRestrictStdin Off
 #    WSGIRestrictStdout Off
     CustomLog   /var/log/profi/profi-access.log combined
@@ -22,16 +22,25 @@
     ServerName file001.profireader.com
     WSGIDaemonProcess file user=www-data group=www-data threads=5
     WSGIProcessGroup file
-    WSGIScriptAlias / ----directory----/run.wsgi
+    WSGIScriptAlias / /var/www/run.wsgi
     CustomLog   /var/log/profi/file001-access.log combined
     ErrorLog    /var/log/profi/file001-error.log
+</VirtualHost>
+
+<VirtualHost static.profireader.com:9000>
+    ServerName static.profireader.com
+    WSGIDaemonProcess static user=www-data group=www-data threads=5
+    WSGIProcessGroup static
+    WSGIScriptAlias / /var/www/run.wsgi
+    CustomLog   /var/log/profi/static-access.log combined
+    ErrorLog    /var/log/profi/static-error.log
 </VirtualHost>
 
 <VirtualHost *:8888>
     ServerName front.profireader.com
     WSGIDaemonProcess front user=www-data group=www-data threads=5
     WSGIProcessGroup front
-    WSGIScriptAlias / ----directory----/run.wsgi
+    WSGIScriptAlias / /var/www/run.wsgi
     CustomLog   /var/log/profi/front-access.log combined
     ErrorLog    /var/log/profi/front-error.log
 </VirtualHost>
