--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -11,6 +11,7 @@
     "bootstrap":"3.3.6",
     "jquery":"2.1.4", 
     "ngImgCrop": "~0.3.2",
-    "angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3"
+    "angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3",
+    "jquery-datetimepicker":"git@github.com:xdan/datetimepicker.git"
   }
 }
