--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -12,6 +12,6 @@
     "jquery":"2.1.4", 
     "ngImgCrop": "~0.3.2",
     "angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3",
-    "jquery-datetimepicker":"git@github.com:xdan/datetimepicker.git"
+    "jquery-datetimepicker":"git@github.com:xdan/datetimepicker.git#v2.4.5"
   }
 }
