--- a/requirements.txt
+++ b/requirements.txt
@@ -26,10 +26,8 @@ oauth2client==1.5.1
 httplib2==0.9.1
 urllib3==1.12
 selenium==2.48.0
-simplejson>=3.8.0
-beaker>=1.8.0
-# python-memcached
-python3-memcached
-
-
-
+simplejson==3.8.0
+beaker==1.8.0
+python-memcached
+#python3-memcached
+yappi
