sso, portal subscription

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -18,18 +18,31 @@ listen http-in
     bind *:80
     bind *:443 ssl crt /etc/haproxy/profireader_haproxy.key.pem
 
-    redirect scheme https code 301 if !{ ssl_fc } { hdr(host) -i profireader.com }
-    redirect scheme https code 301 if !{ ssl_fc } { hdr(host) -i file001.profireader.com }
-    redirect scheme https code 301 if !{ ssl_fc } { hdr(host) -i static.profireader.com }
+#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i kupyty.com }
+#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i file001.kupyty.com }
+#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i static.kupyty.com }
 
     server profi 127.0.0.1:8080
-    use-server profi if { hdr(host) -i profireader.com }
-
     server static 127.0.0.1:9000
-    use-server static if { hdr(host) -i static.profireader.com }
-
     server fileserver 127.0.0.1:9001
+
+    use-server profi if { hdr(host) -i xxx }
+    use-server static if { hdr(host) -i static.xxx }
+    use-server fileserver if { hdr(host) -i file001.xxx }
+
+    use-server profi if { hdr(host) -i profi.oles.zzz }
+    use-server static if { hdr(host) -i static.profi.oles.zzz }
+    use-server fileserver if { hdr(host) -i file001.profi.oles.zzz }
+
+    use-server profi if { hdr(host) -i kupyty.com }
+    use-server static if { hdr(host) -i static.kupyty.com }
+    use-server fileserver if { hdr(host) -i file001.kupyty.com }
+    
+    use-server profi if { hdr(host) -i profireader.com }
+    use-server static if { hdr(host) -i static.profireader.com }
     use-server fileserver if { hdr(host) -i file001.profireader.com }
 
     server front 127.0.0.1:8888
     use-server front if { always_true }
+
+
