--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -13,7 +13,7 @@
     "ngImgCrop": "~0.3.2",
     "angular-ui-slider": "git@github.com:angular-ui/ui-slider.git#v0.1.3",
     "jquery-datetimepicker": "git@github.com:xdan/datetimepicker.git#v2.4.5",
-    "moment": "~2.12.0",
+    "moment": "^2.14.1",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "angular-ui-select": "~0.17.0",
     "angular-db-filemanager": "git@github.com:kakabomba/angular-server-driven-filemanager.git#master",
