--- a/conf/profi-wsgi-apache2.conf
+++ b/conf/profi-wsgi-apache2.conf
@@ -8,7 +8,7 @@
 </Directory>
 
 <VirtualHost *:8080>
-    ServerName kupyty.com
+    ServerName profi.oles.m.ntaxa.com
     WSGIDaemonProcess profi user=www-data group=www-data threads=5
     WSGIProcessGroup profi
     WSGIScriptAlias / /var/www/run.wsgi
@@ -19,7 +19,7 @@
 </VirtualHost>
 
 <VirtualHost *:9001>
-    ServerName file001.kupyty.com
+    ServerName file001.profi.oles.m.ntaxa.com
     WSGIDaemonProcess file user=www-data group=www-data threads=5
     WSGIProcessGroup file
     WSGIScriptAlias / /var/www/run.wsgi
@@ -28,7 +28,7 @@
 </VirtualHost>
 
 <VirtualHost *:9000>
-    ServerName static.kupyty.com
+    ServerName static.profi.oles.m.ntaxa.com
     WSGIDaemonProcess static user=www-data group=www-data threads=5
     WSGIProcessGroup static
     WSGIScriptAlias / /var/www/run.wsgi
@@ -36,12 +36,19 @@
     ErrorLog    /var/log/profi/static-error.log
 </VirtualHost>
 
-<VirtualHost *:8888>
-    ServerName front.kupyty.com
-    WSGIDaemonProcess front user=www-data group=www-data threads=5
-    WSGIProcessGroup front
-    WSGIScriptAlias / /var/www/run.wsgi
-    CustomLog   /var/log/profi/front-access.log combined
-    ErrorLog    /var/log/profi/front-error.log
+#<VirtualHost *:8888>
+#    ServerName front.profi.oles.m.ntaxa.com
+#    WSGIDaemonProcess front user=www-data group=www-data threads=5
+#    WSGIProcessGroup front
+#    WSGIScriptAlias / /var/www/run.wsgi
+#    CustomLog   /var/log/profi/front-access.log combined
+#    ErrorLog    /var/log/profi/front-error.log
+#</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName  letsencrypt.profi.oles.m.ntaxa.com
+    DocumentRoot  /var/www/.well-known/
+    CustomLog   /var/log/profi/letsencrypt-access.log combined
+    ErrorLog    /var/log/profi/letsencrypt-error.log
 </VirtualHost>
 
