--- a/conf/profi-wsgi-apache2.conf
+++ b/conf/profi-wsgi-apache2.conf
@@ -1,17 +1,19 @@
-#WSGIPythonPath /v/var/www1:/v/var/www.venv/lib/python3.4/site-packages1
-#WSGIPythonHome /v/var/www1
+#WSGIPythonPath /v----directory----1:/v----directory----.venv/lib/python3.4/site-packages1
+#WSGIPythonHome /v----directory----1
 
-<Directory /var/www/>
+<Directory ----directory----/>
     Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
 </Directory>
 
 <VirtualHost *:8080>
-    ServerName profi.oles.m.ntaxa.com
+    ServerName ----maindomain----
     WSGIDaemonProcess profi user=www-data group=www-data threads=5
     WSGIProcessGroup profi
-    WSGIScriptAlias / /var/www/run.wsgi
+    SSLCertificateFile /etc/letsencrypt/live/----maindomain----/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/----maindomain----/privkey.pem
+    WSGIScriptAlias / ----directory----/run.wsgi
 #    WSGIRestrictStdin Off
 #    WSGIRestrictStdout Off
     CustomLog   /var/log/profi/profi-access.log combined
@@ -19,35 +21,39 @@
 </VirtualHost>
 
 <VirtualHost *:9001>
-    ServerName file001.profi.oles.m.ntaxa.com
+    ServerName file001.----maindomain----
     WSGIDaemonProcess file user=www-data group=www-data threads=5
     WSGIProcessGroup file
-    WSGIScriptAlias / /var/www/run.wsgi
+    SSLCertificateFile /etc/letsencrypt/live/----maindomain----/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/----maindomain----/privkey.pem
+    WSGIScriptAlias / ----directory----/run.wsgi
     CustomLog   /var/log/profi/file001-access.log combined
     ErrorLog    /var/log/profi/file001-error.log
 </VirtualHost>
 
 <VirtualHost *:9000>
-    ServerName static.profi.oles.m.ntaxa.com
+    ServerName static.----maindomain----
     WSGIDaemonProcess static user=www-data group=www-data threads=5
     WSGIProcessGroup static
-    WSGIScriptAlias / /var/www/run.wsgi
+    SSLCertificateFile /etc/letsencrypt/live/----maindomain----/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/----maindomain----/privkey.pem
+    WSGIScriptAlias / ----directory----/run.wsgi
     CustomLog   /var/log/profi/static-access.log combined
     ErrorLog    /var/log/profi/static-error.log
 </VirtualHost>
 
 #<VirtualHost *:8888>
-#    ServerName front.profi.oles.m.ntaxa.com
+#    ServerName front.----maindomain----
 #    WSGIDaemonProcess front user=www-data group=www-data threads=5
 #    WSGIProcessGroup front
-#    WSGIScriptAlias / /var/www/run.wsgi
+#    WSGIScriptAlias / ----directory----/run.wsgi
 #    CustomLog   /var/log/profi/front-access.log combined
 #    ErrorLog    /var/log/profi/front-error.log
 #</VirtualHost>
 
-<VirtualHost *:80>
-    ServerName  letsencrypt.profi.oles.m.ntaxa.com
-    DocumentRoot  /var/www/.well-known/
+<VirtualHost *:1111>
+    ServerName  letsencrypt.----maindomain----
+    DocumentRoot  ----directory----/letsencryptrequests/
     CustomLog   /var/log/profi/letsencrypt-access.log combined
     ErrorLog    /var/log/profi/letsencrypt-error.log
 </VirtualHost>
