--- a/conf/front-wsgi-apache2.conf
+++ b/conf/front-wsgi-apache2.conf
@@ -9,8 +9,11 @@
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
 
-	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/
+	ServerAdmin profireader@profireader.com
+	#DocumentRoot /var/www/
+	WSGIDaemonProcess front user=www-data group=www-data threads=5
+    WSGIProcessGroup front
+    WSGIScriptAlias / ----directory----/run.wsgi
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
@@ -18,8 +21,8 @@
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog /var/log/profi/front-----domain-----error.log
+	CustomLog /var/log/profi/front-----domain-----access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
@@ -27,11 +30,11 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
-SSLCertificateFile /etc/letsencrypt/live/profi.oles.m.ntaxa.com/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/profi.oles.m.ntaxa.com/privkey.pem
-Include /etc/letsencrypt/options-ssl-apache.conf
-ServerName profi.oles.m.ntaxa.com
-ServerAlias www.profi.oles.m.ntaxa.com
+SSLCertificateFile /etc/letsencrypt/live/----domain----/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/----domain----/privkey.pem
+# Include /etc/letsencrypt/options-ssl-apache.conf
+ServerName ----domain----
+ServerAlias ----aliases----
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
