--- a/conf/apache2/front-wsgi.vh.conf
+++ b/conf/apache2/front-wsgi.vh.conf
@@ -1,5 +1,6 @@
 <IfModule mod_ssl.c>
-<VirtualHost *:8888>
+<If "-e /etc/letsencrypt/live/----domain----">
+<VirtualHost *:443>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -37,5 +38,6 @@ ServerName ----domain----
 ServerAlias ----aliases----
 </VirtualHost>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noeti
+</If>
 </IfModule>
