--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,37 @@
 Flask==0.10.1
-Flask-Script==2.0.5
-Flask-WTF==0.12
+#Flask-Script==2.0.5
+#Flask-WTF==0.12
 Jinja2==2.7.3
-MarkupSafe==0.23
+#MarkupSafe==0.23
 SQLAlchemy==1.0.6
-WTForms==2.0.2
+#WTForms==2.0.2
 Werkzeug==0.10.4
-future==0.14.3
+#future==0.14.3
 itsdangerous==0.24
 psycopg2==2.6.1
 Authomatic==0.1.0.post1
 alembic==0.7.6
 Flask-Login==0.2.11
 Pillow==3.3.0
-SQLAlchemy-Utils==0.30.16
-furl==0.4.7
-phonenumbers==7.0.8
+#SQLAlchemy-Utils==0.30.16
+#furl==0.4.7
+#phonenumbers==7.0.8
 Flask-Mail==0.9.1
-Flask-Moment==0.5.1
+#Flask-Moment==0.5.1
 Flask-Bootstrap==3.3.5.6
-Flask-Babel
-google-api-python-client-py3
-apiclient==1.0.2
-oauth2client==1.5.1
+#Flask-Babel
+google-api-python-client==1.5.3
+pyOpenSSL==16.1.0
+apiclient==1.0.3
+oauth2client==3.0.0
 httplib2==0.9.1
 urllib3==1.12
-selenium==2.48.0
+#selenium==2.48.0
 simplejson==3.8.0
 beaker==1.8.0
 python-memcached
 #python3-memcached
-yappi
+#yappi
 #elasticsearch
 requests
 
