--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -16,7 +16,8 @@ listen http-in
     option forwardfor
     option http-server-close
     bind *:80
-    bind *:443 ssl crt /etc/haproxy/profireader_haproxy.key.pem
+    bind *:443 ssl crt /etc/haproxy/ssl
+#    bind *:443 ssl crt /etc/haproxy/profireader_haproxy.key.pem
 
 #    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i kupyty.com }
 #    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i file001.kupyty.com }
@@ -24,23 +25,33 @@ listen http-in
 
     server profi 127.0.0.1:8080
     server static 127.0.0.1:9000
+    server socket 127.0.0.1:5000
     server fileserver 127.0.0.1:9001
 
     use-server profi if { hdr(host) -i xxx }
     use-server static if { hdr(host) -i static.xxx }
     use-server fileserver if { hdr(host) -i file001.xxx }
+    use-server socket if { hdr(host) -i socket.xxx }
+
+    use-server profi if { hdr(host) -i kornishon.m.ntaxa.com }
+    use-server static if { hdr(host) -i static.kornishon.m.ntaxa.com }
+    use-server fileserver if { hdr(host) -i file001.kornishon.m.ntaxa.com }
+    use-server socket if { hdr(host) -i socket.kornishon.m.ntaxa.com }
 
     use-server profi if { hdr(host) -i profi.oles.zzz }
     use-server static if { hdr(host) -i static.profi.oles.zzz }
     use-server fileserver if { hdr(host) -i file001.profi.oles.zzz }
+    use-server socket if { hdr(host) -i socket.profi.oles.zzz }
 
     use-server profi if { hdr(host) -i kupyty.com }
     use-server static if { hdr(host) -i static.kupyty.com }
     use-server fileserver if { hdr(host) -i file001.kupyty.com }
+    use-server socket if { hdr(host) -i socket.kupyty.com }
     
     use-server profi if { hdr(host) -i profireader.com }
     use-server static if { hdr(host) -i static.profireader.com }
     use-server fileserver if { hdr(host) -i file001.profireader.com }
+    use-server socket if { hdr(host) -i socket.profireader.com }
 
     server front 127.0.0.1:8888
     use-server front if { always_true }
