--- a/conf/apache2/profi-wsgi-apache2.conf
+++ b/conf/apache2/profi-wsgi-apache2.conf
@@ -39,7 +39,7 @@
 <VirtualHost *:5000>
     ServerName socket.kupyty.com
     WSGIDaemonProcess socket user=www-data group=www-data threads=5
-    WSGIProcessGroup static
+    WSGIProcessGroup socket 
     WSGIScriptAlias / /var/www/run.wsgi
     CustomLog   /var/log/profi/socket-access.log combined
     ErrorLog    /var/log/profi/socket-error.log
