--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -1,22 +1,44 @@
 global
-    chroot /var/lib/haproxy
-    stats socket /run/haproxy/admin.sock mode 660 level admin
-    stats timeout 30s
-    user haproxy
-    group haproxy
-    daemon
+	log /dev/log	local0
+	log /dev/log	local1 notice
+	chroot /var/lib/haproxy
+	stats socket /run/haproxy/admin.sock mode 660 level admin
+	stats timeout 30s
+	user haproxy
+	group haproxy
+	daemon
+
+	# Default SSL material locations
+	ca-base /etc/ssl/certs
+	crt-base /etc/ssl/private
+
+	# Default ciphers to use on SSL-enabled listening sockets.
+	# For more information, see ciphers(1SSL). This list is from:
+	#  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
+	ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS
+	ssl-default-bind-options no-sslv3
 
 defaults
-    mode http
-        timeout connect 100000
-        timeout client  1000000
-        timeout server  1000000
+	log	global
+	mode	http
+	option	httplog
+	option	dontlognull
+        timeout connect 5000
+        timeout client  50000
+        timeout server  50000
+	errorfile 400 /etc/haproxy/errors/400.http
+	errorfile 403 /etc/haproxy/errors/403.http
+	errorfile 408 /etc/haproxy/errors/408.http
+	errorfile 500 /etc/haproxy/errors/500.http
+	errorfile 502 /etc/haproxy/errors/502.http
+	errorfile 503 /etc/haproxy/errors/503.http
+	errorfile 504 /etc/haproxy/errors/504.http
 
 listen http-in
     option forwardfor
     option http-server-close
     bind *:80
-    bind *:443 ssl crt /etc/haproxy/ssl
+#    bind *:443 ssl crt /etc/haproxy/ssl
 #    bind *:443 ssl crt /etc/haproxy/profireader_haproxy.key.pem
 
 #    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i kupyty.com }
@@ -55,5 +77,4 @@ listen http-in
 
     server front 127.0.0.1:8888
     use-server front if { always_true }
-
 
