--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ profireader_haproxy.key.pem*
 main_domain.py
 letsencryptrequests/
 scrt/
+log/
 #profapp/static/front/wood
 #profapp/templates/front/wood
 
