polling transport bug fixed in socketio.client (actually not fixed, just changed transport protocol priority)

--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -55,6 +55,11 @@ listen http-in
     use-server fileserver if { hdr(host) -i file001.xxx }
     use-server socket if { hdr(host) -i socket.xxx }
 
+    use-server profi if { hdr(host) -i web.profi }
+    use-server static if { hdr(host) -i static.web.profi }
+    use-server fileserver if { hdr(host) -i file001.web.profi }
+    use-server socket if { hdr(host) -i socket.web.profi }
+
     use-server profi if { hdr(host) -i kornishon.m.ntaxa.com }
     use-server static if { hdr(host) -i static.kornishon.m.ntaxa.com }
     use-server fileserver if { hdr(host) -i file001.kornishon.m.ntaxa.com }
