--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -6,6 +6,7 @@
     "angular-bootstrap": "1.1.0",
     "angular-ui-tinymce": "0.0.10",
     "angular-animate": "~1.4.0",
+    "angular-route": "~1.4.0",
     "angular-ui-grid": "3.0.7",
     "cropper": "~2",
     "bootstrap": "3.3.6",
