haproxy new version

--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -45,10 +45,16 @@ listen http-in
 #    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i file001.kupyty.com }
 #    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i static.kupyty.com }
 
+    
     server profi 127.0.0.1:8080
     server static 127.0.0.1:9000
     server socket 127.0.0.1:5000
     server fileserver 127.0.0.1:9001
+    server postgres 127.0.0.1:81
+
+    http-request redirect prefix http://%[hdr(host),regsub(^www\.,,i)] if { hdr_beg(host) -i www. }
+
+    use-server postgres if { hdr(host) -i postgres.m }
 
     use-server profi if { hdr(host) -i xxx }
     use-server static if { hdr(host) -i static.xxx }
