haproxy specific versuion

--- a/conf/haproxy.cfg
+++ b/conf/haproxy.cfg
@@ -34,58 +34,39 @@ defaults
 	errorfile 503 /etc/haproxy/errors/503.http
 	errorfile 504 /etc/haproxy/errors/504.http
 
-listen http-in
-    option forwardfor
-    option http-server-close
-    bind *:80
-#    bind *:443 ssl crt /etc/haproxy/ssl
-#    bind *:443 ssl crt /etc/haproxy/profireader_haproxy.key.pem
+frontend http
 
-#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i kupyty.com }
-#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i file001.kupyty.com }
-#    redirect scheme http code 301 if { ssl_fc } { hdr(host) -i static.kupyty.com }
+   bind 0.0.0.0:80
+   option http-server-close
+   log /dev/log local0 debug
 
-    
-    server profi 127.0.0.1:8080
-    server static 127.0.0.1:9000
-    server socket 127.0.0.1:5000
-    server fileserver 127.0.0.1:9001
-    server postgres 127.0.0.1:81
+   use_backend postgres if { hdr(host) -i postgres.m }
+   use_backend letsencrypt if { path_beg -i /.well-known/acme-challenge/ }
 
-    http-request redirect prefix http://%[hdr(host),regsub(^www\.,,i)] if { hdr_beg(host) -i www. }
+   use_backend profi if { hdr(host) -i ----maindomain---- }
+   use_backend file if { hdr(host) -i file001.----maindomain---- }
+   use_backend socket if { hdr(host) -i socket.----maindomain---- }
+   use_backend static if { hdr(host) -i static.----maindomain---- }
+   use_backend front if { always_true }
 
-    use-server postgres if { hdr(host) -i postgres.m }
+backend profi
+  server profi localhost:8080 check port 8080
 
-    use-server profi if { hdr(host) -i xxx }
-    use-server static if { hdr(host) -i static.xxx }
-    use-server fileserver if { hdr(host) -i file001.xxx }
-    use-server socket if { hdr(host) -i socket.xxx }
+backend file
+  server file localhost:9001 check port 9001
 
-    use-server profi if { hdr(host) -i web.profi }
-    use-server static if { hdr(host) -i static.web.profi }
-    use-server fileserver if { hdr(host) -i file001.web.profi }
-    use-server socket if { hdr(host) -i socket.web.profi }
+backend socket
+  server socket localhost:5000 check port 5000
 
-    use-server profi if { hdr(host) -i kornishon.m.ntaxa.com }
-    use-server static if { hdr(host) -i static.kornishon.m.ntaxa.com }
-    use-server fileserver if { hdr(host) -i file001.kornishon.m.ntaxa.com }
-    use-server socket if { hdr(host) -i socket.kornishon.m.ntaxa.com }
+backend static
+  server static localhost:9000 check port 9000
 
-    use-server profi if { hdr(host) -i profi.oles.zzz }
-    use-server static if { hdr(host) -i static.profi.oles.zzz }
-    use-server fileserver if { hdr(host) -i file001.profi.oles.zzz }
-    use-server socket if { hdr(host) -i socket.profi.oles.zzz }
+backend front
+  server front localhost:8888 check port 8888
 
-    use-server profi if { hdr(host) -i kupyty.com }
-    use-server static if { hdr(host) -i static.kupyty.com }
-    use-server fileserver if { hdr(host) -i file001.kupyty.com }
-    use-server socket if { hdr(host) -i socket.kupyty.com }
-    
-    use-server profi if { hdr(host) -i profireader.com }
-    use-server static if { hdr(host) -i static.profireader.com }
-    use-server fileserver if { hdr(host) -i file001.profireader.com }
-    use-server socket if { hdr(host) -i socket.profireader.com }
+backend letsencrypt
+  server front localhost:4444 check port 4444
 
-    server front 127.0.0.1:8888
-    use-server front if { always_true }
+backend postgres
+  server postgres localhost:80 check port 80
 
