--- a/profapp/static/bower.json
+++ b/profapp/static/bower.json
@@ -21,6 +21,7 @@
     "socket.io-client": "^1.7.2",
     "angular-db-filemanager": "git@github.com:kakabomba/angular-server-driven-filemanager.git#master",
     "angular-crop": "git@github.com:kakabomba/ng-crop.git#master",
-    "angular-ui-sortable": "~0.14.3"
+    "angular-ui-sortable": "~0.14.3",
+    "google-analytics": "GoogleWebComponents/google-analytics#1.2.3"
   }
 }
