--- a/conf/ansible/install_java_8.yml
+++ b/conf/ansible/install_java_8.yml
@@ -5,6 +5,8 @@
     repo: 'ppa:webupd8team/java'
     codename: 'xenial'
     update_cache: yes
+- name: Automatically select the Oracle License
+  shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
 - name: Install java
   apt:
     name: 'oracle-java8-installer'
