--- a/conf/ansible/ansible.cfg
+++ b/conf/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 retry_files_enabled = False
-inventory           = hosts
-roles_path = ./a/roles
+inventory           = ./hosts
+roles_path          = ./roles
 host_key_checking   = False
