--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-#setuptools==34.0.1
-#packaging==16.8
-#appdirs==1.4.0
+pyparsing==2.2.0
+appdirs==1.4.3
 Flask==0.10.1
 Jinja2==2.7.3
 SQLAlchemy==1.0.6
