--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-SQLAlchemy==2.1
 Werkzeug==0.10.4
 itsdangerous==0.24
 psycopg2==2.6.1
-Authomatic==0.1.0.post1
+git+git://github.com/authomatic/authomatic@e0a8b5f8c5bdfebaa7f796a1fdbfdf807fd93275#egg=Authomatic
 alembic==0.7.6
 Flask-Login==0.2.11
 Pillow==3.3.0
