--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 profapp/static linguist-vendored
 profapp/static/* linguist-vendored
 profapp/static/** linguist-vendored
+profapp/templates linguist-vendored
 
